--- a/package.json
+++ b/package.json
@@ -1,85 +1,74 @@
 {
-  "name": "paysurity-payroll-system",
-  "private": true,
-  "version": "0.1.0",
+  "name": "@paysurity/admin-ui",
+  "version": "1.0.0",
   "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsup src/index.ts --dts --format esm,cjs --external react",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
-    "generate-sitemap": "node scripts/generate-sitemap.js"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@supabase/supabase-js": "^2.39.3",
-    "buffer": "^6.0.3",
+    "@supabase/supabase-js": "^2.39.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "dompurify": "^3.0.9",
-    "i18next": "^23.7.11",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.344.0",
-    "marked": "^12.0.1",
-    "otplib": "^12.0.1",
-    "process": "^0.11.10",
-    "qrcode": "^1.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "idb": "^8.0.0",
+    "jose": "^5.2.3",
+    "lucide-react": "^0.358.0",
     "react-helmet-async": "^2.0.4",
-    "react-i18next": "^14.0.5",
-    "react-router-dom": "^6.22.0",
-    "recharts": "^2.10.3",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "util": "^0.12.5",
-    "uuid": "^9.0.1"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@eslint/js": "^8.56.0",
-    "@faker-js/faker": "^8.4.1",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/dompurify": "^3.0.5",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/marked": "^5.0.2",
-    "@types/node": "^20.11.28",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@eslint/js": "^9.25.0",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.18",
-    "crypto-browserify": "^3.12.0",
-    "cypress": "^13.6.6",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^15.9.0",
-    "jsdom": "^24.0.0",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "postcss": "^8.4.35",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "stream-browserify": "^3.0.0",
+    "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "vite": "^5.1.6",
-    "vite-plugin-node-polyfills": "^0.23.0",
-    "vitest": "^1.3.1"
+    "tsup": "^8.0.2",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^5.1.4"
   }
 }
