--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.3.2",
+    "@paysurity/security": "1.2.1",
     "@supabase/supabase-js": "2.39.0",
     "express": "^4.18.2",
     "react-hook-form": "7.49.2",
