--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:load": "jest --testMatch='**/tests/load/**/*.test.js'",
+    "test:offline": "jest --testMatch='**/tests/offline/**/*.test.js'"
   },
   "dependencies": {
+    "legacy-peer-deps": true,
     "@hookform/resolvers": "3.3.2",
+    "@mui/x-charts": "6.18.3",
     "@paysurity/security": "1.2.1",
     "@paysurity/ui": "1.1",
     "@supabase/supabase-js": "2.39.0",
+    "cron-parser": "4.9.0",
     "express": "^4.18.2",
     "react-hook-form": "7.49.2",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
