--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@paysurity/ui": "1.1",
     "@supabase/supabase-js": "2.39.0",
     "cron-parser": "4.9.0",
+    "dotenv-encrypted": "^1.0.0",
     "express": "^4.18.2",
     "react-hook-form": "7.49.2",
     "zod": "3.22.4"
